--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>javascript imdb movies</title>
-		<link rel="stylesheet" href="imdb.css" />
+		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 	</head>
 
@@ -23,5 +23,5 @@
 			</div>
 		</div>
 	</body>
-	<script src="imdb.js"></script>
+	<script src="index.js"></script>
 </html>
