--- a/index.html
+++ b/index.html
@@ -13,13 +13,28 @@
 		<div class="container">
 			<div class="search">
 				<input type="text" placeholder="Enter Movie Name Here....." />
-				<button class="searchbtn">Search</button>
+				<button class="searchbtn"><i class="fa-solid fa-magnifying-glass"></i></button>
 			</div>
 			<div class="result">
 				<i class="fas fa-star" style="color: #1ad03f"></i>
 			</div>
 			<div class="loader">
-				<div class="loading"></div>
+				<div class="loading">
+					<div class="lds-spinner">
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+						<div></div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
